trying to fix line wrap on normal phones

--- a/team955.org/css/customStyles.css
+++ b/team955.org/css/customStyles.css
@@ -346,6 +346,10 @@ body {
     padding: 5px 0;
   }
 
+  #rO .navbar-brand {
+    padding: 0;
+  }
+
   #rO .titleR,
   #rO .titleL{
     text-align: center;
